--- a/eduaid_web/package.json
+++ b/eduaid_web/package.json
@@ -2,6 +2,7 @@
   "name": "eduaid_web",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -19,7 +20,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint ./src**",
+    "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
+    "lint:fix": "eslint --fix",
+    "prepare": "cd ../ && husky install ./eduaid_web/.husky"
   },
   "eslintConfig": {
     "extends": [
@@ -40,6 +45,15 @@
     ]
   },
   "devDependencies": {
+    "@eslint/js": "^9.17.0",
+    "eslint": "^8.57.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react": "^7.37.3",
+    "globals": "^15.14.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^15.3.0",
+    "prettier": "3.4.2",
     "tailwindcss": "^3.4.9"
   }
 }
